package com.farmovo.backend.exceptions;

public class UserManagementException extends RuntimeException {
    public UserManagementException(String message) {
        super(message);
    }
}
