package com.farmovo.backend.models;

import jakarta.persistence.*;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.EqualsAndHashCode;
import lombok.NoArgsConstructor;

import java.math.BigDecimal;
import java.time.LocalDateTime;

@Entity
@Table(
        name = "sale_transactions",
        uniqueConstraints = @UniqueConstraint(name = "ux_sale_stocktake_id", columnNames = {"stocktake_id"})
)
@Data
@NoArgsConstructor
@AllArgsConstructor
@EqualsAndHashCode(callSuper = true)
public class SaleTransaction extends Base {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @Column(name = "id")
    private Long id;

    @Column(name = "name", unique = true, length = 20)
    private String name;

    @Column(name = "total_amount")
    private BigDecimal totalAmount;

    @Column(name = "paid_amount")
    private BigDecimal paidAmount;

    @Column(name = "detail", columnDefinition = "TEXT")
    private String detail;

    @Column(name = "sale_transaction_note", length = 1000)
    private String saleTransactionNote;

    @Enumerated(EnumType.STRING)
    @Column(name = "status", length = 50)
    private SaleTransactionStatus status;

    @Column(name = "sale_date", nullable = false)
    private LocalDateTime saleDate;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "customer_id")
    private Customer customer;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "store_id")
    private Store store;

    @Column(name = "stocktake_id")
    private Long stocktakeId;
    
    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "stocktake_id", insertable = false, updatable = false,
            foreignKey = @ForeignKey(name = "fk_sale_stocktake"))
    private Stocktake stocktakeRef;
}